--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <titel>Portfolie</titel>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="main.css">
     </head>
@@ -17,8 +18,12 @@
         <h1>HTML hygge opgave til torsdag</h1>
 
         <img class="img" src="src/Ressources/Mig.jpg" height="340" width="340">
+        <section>
         <p class="round1"><b>Navn: Markus N. L. Jakobsen<br>Uddanelse: 2. semester datamatiker
             <br>Køn: Mand<br>Alder: 20<br>By: Hvidovre</b></p>
+        </section>
+
+        <section>
         <p class="round2"><b>Referat af spillets historie</b><br>Historien starter med et flashback,
             hvor hovedpersonen møder Juliet grædende i en elevator.
             Hovedpersonen bliver forelsket ved første blik. Heldigvis for hovedpersonen,
@@ -30,5 +35,8 @@
             På Juliets sidste dag beslutter de sig for at slukke hende i pariserhjulet.
             Et par dage senere venter hovedpersonen på hans nye partner ved navn Juliet.</p><br>
         <p class="round2"><b>Spillet:</b><br><img class="clearfix" src="src/Ressources/udklip1.png"><br><img class="clearfix" src="src/Ressources/udklip2.png" width="700"></p><br>
+        </section>
+
+    <fotter><p>Mail: <a href="mailto:markusharen@gmail"></a>  tlf: 61721391</p></fotter>
     </body>
 </html>
