--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <p class="round2"><b>Spillet:</b><br><img class="clearfix" src="src/Ressources/udklip1.png"><br><img class="clearfix" src="src/Ressources/udklip2.png" width="700"></p><br>
         </section>
 
-    <fotter><p>Mail:markusharen@gmail    tlf: 61721391</p></fotter>
+    <fotter><p>Mail: markusharen@gmail.com    tlf: 61721391</p></fotter>
     </body>
 </html>
