--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         </section>
 
         <section>
+            <p class="round1"><b>Uddanelses steder:</b><br><ul>
+            <li>Langhøjskolen</li>
+            <li>TEC 10. klasse</li>
+            <li>Københavns mediegymnasium</li>
+            <li>KEA datamatikker: ingangværdende</li>
+        </ul>  </b></p>
+        </section>
+
+        <section>
         <p class="round2"><b>Referat af spillets historie</b><br>Historien starter med et flashback,
             hvor hovedpersonen møder Juliet grædende i en elevator.
             Hovedpersonen bliver forelsket ved første blik. Heldigvis for hovedpersonen,
