--- a/index.html
+++ b/index.html
@@ -5,33 +5,37 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <header>
-        <ul>
-            <li><a href="#OmMig">Om mig</a></li>
-            <li><a href="#Code">Koden til hjemmesiden</a></li>
-            <li><a href= #Omspillet>Spil jeg lavede for sjov</a></li>
-            <li><a href="src/Ressources/Ripped-memories.html">Ripped memories</a></li>
+        <ul class="ul1">
+            <li class="li1"><a href="#OmMig">Om mig</a></li>
+            <li class="li1"><a href="#Code">Koden til hjemmesiden</a></li>
+            <li class="li1"><a href= #Omspillet>Spil jeg lavede for sjov</a></li>
+            <li class="li1"><a href="src/Ressources/Ripped-memories.html">Ripped memories</a></li>
+            <li class="li1"><a href="#OmMig">CarWash projekt</a></li>
+            <li class="li1"><a href="#OmMig">Marios pizzaria</a></li>
+            <li class="li1"><a href="#OmMig">Delfinen</a></li>
         </ul>
     </header>
     <body>
 
         <h1>HTML hygge opgave til torsdag</h1>
 
-        <img class="img" src="src/Ressources/Mig.jpg" height="340" width="340">
-        <section>
+        <img class="img"  src="src/Ressources/Mig.jpg" height="340" width="340">
+
         <p class="round1"><b>Navn: Markus N. L. Jakobsen<br>Uddanelse: 2. semester datamatiker
             <br>Køn: Mand<br>Alder: 20<br>By: Hvidovre</b></p>
-        </section>
 
-        <section>
-            <p class="round1"><b>Uddanelses steder:</b><br><ul>
-            <li>Langhøjskolen</li>
-            <li>TEC 10. klasse</li>
-            <li>Københavns mediegymnasium</li>
-            <li>KEA datamatikker: ingangværdende</li>
-        </ul>  </b></p>
-        </section>
+            <ul class="round">
+                <p><b>Udannelses steder</b></p>
+                <li>Langhøjskolen</li>
+                <li>TEC 10. klasse</li>
+                <li>Københavns mediegymnasium</li>
+                <li>Kea datamatiker 2. semester: nuværdende</li>
+                <br>
+            </ul>
 
-        <section>
+
+
+
         <p class="round2"><b>Referat af spillets historie</b><br>Historien starter med et flashback,
             hvor hovedpersonen møder Juliet grædende i en elevator.
             Hovedpersonen bliver forelsket ved første blik. Heldigvis for hovedpersonen,
@@ -43,8 +47,8 @@
             På Juliets sidste dag beslutter de sig for at slukke hende i pariserhjulet.
             Et par dage senere venter hovedpersonen på hans nye partner ved navn Juliet.</p><br>
         <p class="round2"><b>Spillet:</b><br><img class="clearfix" src="src/Ressources/udklip1.png"><br><img class="clearfix" src="src/Ressources/udklip2.png" width="700"></p><br>
-        </section>
 
-    <fotter><p>Mail: markusharen@gmail.com    tlf: 61721391</p></fotter>
+
+    <footer><p>Mail: markusharen@gmail.com    tlf: 61721391</p></footer>
     </body>
 </html>
